--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QAYHAM SOFTWARES - Innovative Software Solutions</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Font Awesome 6 (latest) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
 </head>
 
 <body>
@@ -24,9 +27,10 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="burger">
-                    <div class="line1"></div>
+                    <!-- <div class="line1"></div>
                     <div class="line2"></div>
-                    <div class="line3"></div>
+                    <div class="line3"></div> -->
+                    <img src="gradientlogo.png" alt="logo" class="brandlogo">
                 </div>
             </nav>
         </div>
@@ -45,7 +49,7 @@
                     <a href="#contact" class="btn btn-outline">Contact Us</a>
                 </div>
             </div>
-            <div class="hero-img">
+            <div class="hero-img ">
                 <img src="gradientlogo.png" alt="Dashboard Software" class="software-image">
             </div>
         </div>
@@ -150,7 +154,7 @@
                     </ul>
                 </div>
                 <div class="features-img">
-                    <img src="images/features.png" alt="Software Features" class="features-image">
+                    <img src="feature.png" alt="Software Features" class="features-image">
                 </div>
             </div>
         </div>
@@ -165,7 +169,8 @@
             </div>
             <div class="testimonial-container">
                 <div class="testimonial-card active">
-                    <img src="images/client1.jpg" alt="Client" class="testimonial-img">
+
+                    <img src="profile.png" alt="Client" class="testimonial-img">
                     <div class="testimonial-rating">★★★★★</div>
                     <p>"QAYHAM SOFTWARES transformed our business operations with their custom CRM solution. The
                         software streamlined our processes and increased our productivity by over 40%. Their team was
@@ -174,7 +179,7 @@
                     <p>CEO, TechInnovate Inc.</p>
                 </div>
                 <div class="testimonial-card">
-                    <img src="images/client2.jpg" alt="Client" class="testimonial-img">
+                    <img src="profile.png" alt="Client" class="testimonial-img">
                     <div class="testimonial-rating">★★★★★</div>
                     <p>"The mobile app developed by QAYHAM SOFTWARES exceeded our expectations. The user interface is
                         intuitive, and the performance is outstanding. Our customers love the app, and it has
@@ -183,7 +188,7 @@
                     <p>Product Manager, GlobalRetail</p>
                 </div>
                 <div class="testimonial-card">
-                    <img src="images/client3.jpg" alt="Client" class="testimonial-img">
+                    <img src="profile.png" alt="Client" class="testimonial-img">
                     <div class="testimonial-rating">★★★★★</div>
                     <p>"Working with QAYHAM SOFTWARES was a game-changer for our data analytics capabilities. Their
                         solution gave us insights we never had before, allowing us to make data-driven decisions that
@@ -384,12 +389,14 @@
     </footer>
 
     <!-- Back to top button -->
-    <div class="back-to-top">
+    <!-- Back to top button -->
+    <div class="back-to-top" id="backToTop">
         <i class="fas fa-arrow-up"></i>
     </div>
 
+
     <!-- JavaScript -->
-    <script>
+    <script src="app.js">
         // JavaScript will be linked in separate file
     </script>
 </body>
