--- a/index.html
+++ b/index.html
@@ -2,14 +2,49 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QAYHAM SOFTWARES - Innovative Software Solutions</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- Font Awesome 6 (latest) -->
+    <meta name="description"
+        content="QAYHAM SOFTWARES delivers custom software, mobile apps, and innovative digital solutions tailored to your business needs." />
+    <meta name="keywords"
+        content="QAYHAM SOFTWARES, software development, mobile app development, CRM solutions, web development, custom software, tech company, software solutions" />
+    <meta name="author" content="QAYHAM SOFTWARES" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://qayham.com/" />
+
+    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://qayham.com/" />
+    <meta property="og:title" content="QAYHAM SOFTWARES - Innovative Software Solutions" />
+    <meta property="og:description"
+        content="Delivering modern, scalable, and intelligent software solutions for businesses of all sizes." />
+    <meta property="og:image" content="https://qayham.com/assets/og-image.jpg" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://qayham.com/" />
+    <meta name="twitter:title" content="QAYHAM SOFTWARES - Innovative Software Solutions" />
+    <meta name="twitter:description"
+        content="Delivering modern, scalable, and intelligent software solutions for businesses of all sizes." />
+    <meta name="twitter:image" content="https://qayham.com/assets/og-image.jpg" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="https://qayham.com/assets/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://qayham.com/assets/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://qayham.com/assets/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://qayham.com/assets/favicon-16x16.png" />
+
+    <!-- Manifest (optional for PWA setup) -->
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
+    <!-- Main Stylesheet -->
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 
 <body>
     <!-- Header -->
