--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QAYHAM SOFTWARES - Innovative Software Solutions</title>
+    <title>QAYHAM</title>
     <meta name="description"
-        content="QAYHAM SOFTWARES delivers custom software, mobile apps, and innovative digital solutions tailored to your business needs." />
+        content="QAYHAM delivers custom software, mobile apps, and innovative digital solutions tailored to your business needs." />
     <meta name="keywords"
-        content="QAYHAM SOFTWARES, software development, mobile app development, CRM solutions, web development, custom software, tech company, software solutions" />
-    <meta name="author" content="QAYHAM SOFTWARES" />
+        content="QAYHAM, software development, mobile app development, CRM solutions, web development, custom software, tech company, software solutions" />
+    <meta name="author" content="QAYHAM" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://qayham.com/" />
 
     <!-- Open Graph (Facebook, LinkedIn, etc.) -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://qayham.com/" />
-    <meta property="og:title" content="QAYHAM SOFTWARES - Innovative Software Solutions" />
+    <meta property="og:title" content="QAYHAM - Innovative Software Solutions" />
     <meta property="og:description"
         content="Delivering modern, scalable, and intelligent software solutions for businesses of all sizes." />
     <meta property="og:image" content="https://qayham.com/assets/og-image.jpg" />
@@ -24,13 +24,13 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://qayham.com/" />
-    <meta name="twitter:title" content="QAYHAM SOFTWARES - Innovative Software Solutions" />
+    <meta name="twitter:title" content="QAYHAM - Innovative Software Solutions" />
     <meta name="twitter:description"
         content="Delivering modern, scalable, and intelligent software solutions for businesses of all sizes." />
     <meta name="twitter:image" content="https://qayham.com/assets/og-image.jpg" />
 
     <!-- Favicon -->
-    <link rel="icon" href="https://qayham.com/assets/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="gradientlogo.png" type="image/x-icon" />
     <link rel="apple-touch-icon" sizes="180x180" href="https://qayham.com/assets/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="https://qayham.com/assets/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="https://qayham.com/assets/favicon-16x16.png" />
@@ -52,7 +52,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    QAYHAM <span>SOFTWARES</span>
+                    QAYHAM <span></span>
                 </div>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
@@ -77,7 +77,7 @@
             <div class="hero-content">
                 <div class="hero-tag">Innovative Software Solutions</div>
                 <h1>Transform Your Business With Powerful Software</h1>
-                <p>QAYHAM SOFTWARES delivers cutting-edge software solutions that help businesses streamline operations,
+                <p>QAYHAM delivers cutting-edge software solutions that help businesses streamline operations,
                     improve efficiency, and drive growth in an increasingly digital world.</p>
                 <div class="hero-btns">
                     <a href="#services" class="btn btn-primary">Our Services</a>
@@ -141,7 +141,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>Key Features</h2>
-                <p>Why businesses choose QAYHAM SOFTWARES</p>
+                <p>Why businesses choose QAYHAM</p>
             </div>
             <div class="features-container">
                 <div class="features-content">
@@ -207,7 +207,7 @@
 
                     <img src="profile.png" alt="Client" class="testimonial-img">
                     <div class="testimonial-rating">★★★★★</div>
-                    <p>"QAYHAM SOFTWARES transformed our business operations with their custom CRM solution. The
+                    <p>"QAYHAM transformed our business operations with their custom CRM solution. The
                         software streamlined our processes and increased our productivity by over 40%. Their team was
                         professional, responsive, and truly understood our needs."</p>
                     <h4>Sarah Johnson</h4>
@@ -216,7 +216,7 @@
                 <div class="testimonial-card">
                     <img src="profile.png" alt="Client" class="testimonial-img">
                     <div class="testimonial-rating">★★★★★</div>
-                    <p>"The mobile app developed by QAYHAM SOFTWARES exceeded our expectations. The user interface is
+                    <p>"The mobile app developed by QAYHAM exceeded our expectations. The user interface is
                         intuitive, and the performance is outstanding. Our customers love the app, and it has
                         significantly increased our engagement metrics."</p>
                     <h4>Michael Chen</h4>
@@ -225,7 +225,7 @@
                 <div class="testimonial-card">
                     <img src="profile.png" alt="Client" class="testimonial-img">
                     <div class="testimonial-rating">★★★★★</div>
-                    <p>"Working with QAYHAM SOFTWARES was a game-changer for our data analytics capabilities. Their
+                    <p>"Working with QAYHAM was a game-changer for our data analytics capabilities. Their
                         solution gave us insights we never had before, allowing us to make data-driven decisions that
                         have dramatically improved our bottom line."</p>
                     <h4>Emma Rodriguez</h4>
@@ -305,7 +305,7 @@
         <div class="container">
             <h2>Ready to Transform Your Business?</h2>
             <p>Join hundreds of satisfied clients who have revolutionized their operations with our software solutions.
-                Schedule a free consultation today and discover how QAYHAM SOFTWARES can help you achieve your business
+                Schedule a free consultation today and discover how QAYHAM can help you achieve your business
                 goals.</p>
             <a href="#contact" class="btn btn-light">Schedule a Free Consultation</a>
         </div>
@@ -340,7 +340,7 @@
                         <div class="contact-icon">✉️</div>
                         <div>
                             <h4>Email</h4>
-                            <p>info@qayhamsoftwares.com</p>
+                            <p>info@qayham.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -378,7 +378,7 @@
         <div class="container">
             <div class="footer-container">
                 <div class="footer-col">
-                    <h4>QAYHAM SOFTWARES</h4>
+                    <h4>QAYHAM</h4>
                     <p>Delivering innovative software solutions that transform businesses and drive growth in an
                         increasingly digital world.</p>
                     <div class="social-icons">
@@ -418,7 +418,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2025 QAYHAM SOFTWARES. All Rights Reserved.</p>
+                <p>&copy; 2025 QAYHAM. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
