--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta name="twitter:image" content="https://qayham.com/assets/og-image.jpg" />
 
     <!-- Favicon -->
-    <link rel="icon" href="gradientlogo.png" type="image/x-icon" />
+    <link rel="icon" href="gradientlogo.webp" type="image/x-icon" />
     <link rel="apple-touch-icon" sizes="180x180" href="https://qayham.com/assets/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="https://qayham.com/assets/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="https://qayham.com/assets/favicon-16x16.png" />
@@ -65,7 +65,7 @@
                     <!-- <div class="line1"></div>
                     <div class="line2"></div>
                     <div class="line3"></div> -->
-                    <img src="gradientlogo.png" alt="logo" class="brandlogo">
+                    <img src="gradientlogo.webp" alt="logo" class="brandlogo">
                 </div>
             </nav>
         </div>
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="hero-img ">
-                <img src="gradientlogo.png" alt="Dashboard Software" class="software-image">
+                <img src="gradientlogo.webp" alt="Dashboard Software" class="software-image">
             </div>
         </div>
     </section>
@@ -189,7 +189,7 @@
                     </ul>
                 </div>
                 <div class="features-img">
-                    <img src="feature.png" alt="Software Features" class="features-image">
+                    <img src="feature.webp" alt="Software Features" class="features-image">
                 </div>
             </div>
         </div>
