--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta name="twitter:image" content="https://qayham.com/assets/og-image.jpg" />
 
     <!-- Favicon -->
-    <link rel="icon" href="gradientlogo.webp" type="image/x-icon" />
+    <link rel="icon" href="images/logo/gradientlogo.webp" type="image/x-icon" />
     <link rel="apple-touch-icon" sizes="180x180" href="https://qayham.com/assets/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="https://qayham.com/assets/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="https://qayham.com/assets/favicon-16x16.png" />
@@ -65,7 +65,7 @@
                     <!-- <div class="line1"></div>
                     <div class="line2"></div>
                     <div class="line3"></div> -->
-                    <img src="gradientlogo.webp" alt="logo" class="brandlogo">
+                    <img src="images/logo/gradientlogo.webp" alt="logo" class="brandlogo">
                 </div>
             </nav>
         </div>
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="hero-img ">
-                <img src="gradientlogo.webp" alt="Dashboard Software" class="software-image">
+                <img src="images/logo/gradientlogo.webp" alt="Dashboard Software" class="software-image">
             </div>
         </div>
     </section>
@@ -189,7 +189,7 @@
                     </ul>
                 </div>
                 <div class="features-img">
-                    <img src="feature.webp" alt="Software Features" class="features-image">
+                    <img src="images/features/feature.webp" alt="Software Features" class="features-image">
                 </div>
             </div>
         </div>
@@ -205,7 +205,7 @@
             <div class="testimonial-container">
                 <div class="testimonial-card active">
 
-                    <img src="profile.png" alt="Client" class="testimonial-img">
+                    <img src="images/features/profile.png" alt="Client" class="testimonial-img">
                     <div class="testimonial-rating">★★★★★</div>
                     <p>"QAYHAM transformed our business operations with their custom CRM solution. The
                         software streamlined our processes and increased our productivity by over 40%. Their team was
@@ -214,7 +214,7 @@
                     <p>CEO, TechInnovate Inc.</p>
                 </div>
                 <div class="testimonial-card">
-                    <img src="profile.png" alt="Client" class="testimonial-img">
+                    <img src="images/features/profile.png" alt="Client" class="testimonial-img">
                     <div class="testimonial-rating">★★★★★</div>
                     <p>"The mobile app developed by QAYHAM exceeded our expectations. The user interface is
                         intuitive, and the performance is outstanding. Our customers love the app, and it has
@@ -223,7 +223,7 @@
                     <p>Product Manager, GlobalRetail</p>
                 </div>
                 <div class="testimonial-card">
-                    <img src="profile.png" alt="Client" class="testimonial-img">
+                    <img src="images/features/profile.png" alt="Client" class="testimonial-img">
                     <div class="testimonial-rating">★★★★★</div>
                     <p>"Working with QAYHAM was a game-changer for our data analytics capabilities. Their
                         solution gave us insights we never had before, allowing us to make data-driven decisions that
@@ -310,7 +310,67 @@
             <a href="#contact" class="btn btn-light">Schedule a Free Consultation</a>
         </div>
     </section>
+    <!-- Products Section -->
+    <section class="products" id="products">
+        <div class="container">
+            <div class="section-header">
+                <h2>Our Products</h2>
+                <p>Explore our published applications available on Google Play Store</p>
+            </div>
+            <div class="products-grid">
+                <!-- Compound Calculator Card -->
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="images/products/compounding-calculator.png" alt="Compound Calculator">
+                    </div>
+                    <div class="product-content">
+                        <h3>Compound Calculator</h3>
+                        <p>Advanced compound interest calculator with detailed breakdowns and multiple currency support.
+                            Perfect for financial planning and investment calculations.</p>
+                        <a href="https://play.google.com/store/apps/details?id=com.bilalparray07.compoundingcalculator"
+                            target="_blank" rel="noopener noreferrer" class="btn btn-primary">
+                            <i class="fab fa-google-play"></i> Get on Play Store
+                        </a>
+                    </div>
+                </div>
 
+                <!-- Quick Units Card -->
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="images/products/quick-units.png" alt="Quick Units">
+                    </div>
+                    <div class="product-content">
+                        <h3>Quick Units</h3>
+                        <p>Instant unit conversion tool supporting various measurement systems.
+                            Convert between currencies, lengths, weights, temperatures, and more with real-time rates.
+                        </p>
+                        <a href="https://play.google.com/store/apps/details?id=com.qayham.quickunits" target="_blank"
+                            rel="noopener noreferrer" class="btn btn-primary">
+                            <i class="fab fa-google-play"></i> Get on Play Store
+                        </a>
+                    </div>
+                </div>
+                <!-- Retail lifter -->
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="images/products/retail-lifter.png" alt="Quick Units">
+                    </div>
+                    <div class="product-content">
+                        <h3>Retail Lifter</h3>
+                        <p>The Retail Lifter is a cutting-edge mobile app designed to revolutionize the way retailers
+                            manage their inventory. With its intuitive interface and advanced features, the Retail
+                            Lifter
+                            empowers retailers to efficiently manage their inventory, optimize inventory levels, and
+                            enhance customer experience.
+                        </p>
+                        <a href="#" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
+                            <i class="fab fa-google-play"></i> Coming Soon
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Contact Section -->
     <section class="contact" id="contact">
         <div class="container">
