--- a/index.html
+++ b/index.html
@@ -441,12 +441,12 @@
                     <h4>QAYHAM</h4>
                     <p>Delivering innovative software solutions that transform businesses and drive growth in an
                         increasingly digital world.</p>
-                    <div class="social-icons">
+                    <!-- <div class="social-icons">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="footer-col">
                     <h4>Quick Links</h4>
