--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="QAYHAM - Innovative Software Solutions" />
     <meta property="og:description"
         content="Delivering modern, scalable, and intelligent software solutions for businesses of all sizes." />
-    <meta property="og:image" content="https://qayham.com/assets/og-image.jpg" />
+    <meta property="og:image" content="https://qayham.com/images/logo/gradientlogo.webp" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -27,13 +27,13 @@
     <meta name="twitter:title" content="QAYHAM - Innovative Software Solutions" />
     <meta name="twitter:description"
         content="Delivering modern, scalable, and intelligent software solutions for businesses of all sizes." />
-    <meta name="twitter:image" content="https://qayham.com/assets/og-image.jpg" />
+    <meta name="twitter:image" content="https://qayham.com/images/logo/gradientlogo.webp" />
 
     <!-- Favicon -->
     <link rel="icon" href="images/logo/gradientlogo.webp" type="image/x-icon" />
-    <link rel="apple-touch-icon" sizes="180x180" href="https://qayham.com/assets/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="https://qayham.com/assets/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="https://qayham.com/assets/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://qayham.com/images/logo/gradientlogo.webp" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://qayham.com/images/logo/gradientlogo.webp" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://qayham.com/images/logo/gradientlogo.webp" />
 
     <!-- Manifest (optional for PWA setup) -->
     <link rel="manifest" href="/site.webmanifest" />
