--- a/index.html
+++ b/index.html
@@ -2,48 +2,42 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QAYHAM</title>
+    <!-- Primary Meta Tags -->
+    <title>QAYHAM | Custom Software, Mobile Apps & Digital Solutions</title>
     <meta name="description"
-        content="QAYHAM delivers custom software, mobile apps, and innovative digital solutions tailored to your business needs." />
-    <meta name="keywords"
-        content="QAYHAM, software development, mobile app development, CRM solutions, web development, custom software, tech company, software solutions" />
-    <meta name="author" content="QAYHAM" />
-    <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://qayham.com/" />
+        content="QAYHAM crafts custom software, mobile applications, and digital solutions to fuel business growth. Tailored CRM, web development & enterprise services." />
 
-    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://qayham.com/" />
-    <meta property="og:title" content="QAYHAM - Innovative Software Solutions" />
+    <meta property="og:title" content="QAYHAM | Custom Software, Mobile Apps & Digital Solutions" />
     <meta property="og:description"
-        content="Delivering modern, scalable, and intelligent software solutions for businesses of all sizes." />
+        content="Custom software, mobile app development, and digital solutions designed to elevate your business. Partner with QAYHAM for scalable, innovative services." />
     <meta property="og:image" content="https://qayham.com/images/logo/gradientlogo.webp" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://qayham.com/" />
-    <meta name="twitter:title" content="QAYHAM - Innovative Software Solutions" />
+    <meta name="twitter:title" content="QAYHAM | Custom Software, Mobile Apps & Digital Solutions" />
     <meta name="twitter:description"
-        content="Delivering modern, scalable, and intelligent software solutions for businesses of all sizes." />
+        content="Innovative custom software, mobile apps, and digital solutions crafted for growth. Discover QAYHAM’s expertise in CRM, web, and enterprise software." />
     <meta name="twitter:image" content="https://qayham.com/images/logo/gradientlogo.webp" />
 
-    <!-- Favicon -->
-    <link rel="icon" href="images/logo/gradientlogo.webp" type="image/x-icon" />
+    <!-- Canonical -->
+    <link rel="canonical" href="https://qayham.com/" />
+
+    <!-- Favicon & PWA -->
+    <link rel="icon" href="images/logo/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" sizes="180x180" href="https://qayham.com/images/logo/gradientlogo.webp" />
     <link rel="icon" type="image/png" sizes="32x32" href="https://qayham.com/images/logo/gradientlogo.webp" />
     <link rel="icon" type="image/png" sizes="16x16" href="https://qayham.com/images/logo/gradientlogo.webp" />
-
-    <!-- Manifest (optional for PWA setup) -->
     <link rel="manifest" href="/site.webmanifest" />
 
-    <!-- Font Awesome -->
+    <!-- External Styles & Fonts -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-
-    <!-- Main Stylesheet -->
     <link rel="stylesheet" href="style.css" />
 </head>
+
 
 
 <body>
