--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>QAYHAM | Custom Software, Mobile Apps & Digital Solutions</title>
     <meta name="description"
         content="QAYHAM crafts custom software, mobile applications, and digital solutions to fuel business growth. Tailored CRM, web development & enterprise services." />
+    <meta name="keywords"
+        content="QAYHAM,qayham,qayam,qaham,qayham.com, custom software, mobile app development, CRM solutions, web development, digital solutions, enterprise software" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
