--- a/index.html
+++ b/index.html
@@ -365,6 +365,23 @@
                         </a>
                     </div>
                 </div>
+                <!-- Team awesome sozeith -->
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="images/products/icon.png" alt="teamawesomesozeith">
+                    </div>
+                    <div class="product-content">
+                        <h3>Team Awesome Sozeith</h3>
+                        <p>The Team Awesome Sozeith is an innovative mobile app designed to track your team's
+                            performance. With its intuitive interface and advanced features, Team Awesome Sozeith allows
+                            fans to effortlessly monitor the stats of their favorite Awesomies.
+                        </p>
+                        <a href="https://play.google.com/store/apps/details?id=com.qayham.teamawesomesozeith"
+                            target="_blank" rel="noopener noreferrer" class="btn btn-primary">
+                            <i class="fab fa-google-play"></i> Get on Play Store
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
