qescanner added as product

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                 <!-- Team awesome sozeith -->
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="images/products/icon.png" alt="teamawesomesozeith">
+                        <img src="images/products/teamawesomesozeith.png" alt="teamawesomesozeith">
                     </div>
                     <div class="product-content">
                         <h3>Team Awesome Sozeith</h3>
@@ -382,6 +382,27 @@
                         </a>
                     </div>
                 </div>
+                <!-- QR Scanner And Generator -->
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="images/products/qrscanner.png" alt="QR Scanner and Generator App Logo">
+                    </div>
+                    <div class="product-content">
+                        <h3>QR Scanner and Generator</h3>
+                        <p>
+                            The QR Scanner and Generator is a fast, lightweight mobile app that allows users to
+                            effortlessly scan all types of QR codes and barcodes. It also enables users to generate
+                            custom QR codes for websites, Wi-Fi credentials, emails, contacts, SMS, geo locations, and
+                            more. With an intuitive UI and offline capabilities, it's the perfect tool for personal and
+                            professional use.
+                        </p>
+                        <a href="https://play.google.com/store/apps/details?id=com.qayham.qrscanner" target="_blank"
+                            rel="noopener noreferrer" class="btn btn-primary">
+                            <i class="fab fa-google-play"></i> Get on Play Store
+                        </a>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
