--- a/products/quickunits/index.html
+++ b/products/quickunits/index.html
@@ -1,4 +1,3 @@
 redirecting to app...
 Go to playstore
-<a href="https://play.google.com/store/apps/details?id=com.qayham.quickunits">Qr Scanner and
-    Generator </a>
+<a href="https://play.google.com/store/apps/details?id=com.qayham.quickunits">quickunits </a>
