--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <li><a href="#features">Features</a></li>
                     <li><a href="#pricing">Pricing</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="/cloudnotes/">Cloud Notes</a></li>
                 </ul>
                 <div class="burger">
                     <!-- <div class="line1"></div>
@@ -77,7 +78,7 @@
                 <p>QAYHAM delivers cutting-edge software solutions that help businesses streamline operations,
                     improve efficiency, and drive growth in an increasingly digital world.</p>
                 <div class="hero-btns">
-                    <a href="#services" class="btn btn-primary">Our Services</a>
+                    <a href="/cloudnotes/" class="btn btn-primary">Cloud Notes</a>
                     <a href="#contact" class="btn btn-outline">Contact Us</a>
                 </div>
             </div>
