--- a/cloudnotes/index.html
+++ b/cloudnotes/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -28,29 +27,28 @@
   <meta name="apple-mobile-web-app-title" content="Cloud Notes">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>Cloud Notes</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "121866772";
+    var serviceWorkerVersion = ""2490439952"";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
-
 <body>
   <script>
-    window.addEventListener('load', function (ev) {
+    window.addEventListener('load', function(ev) {
       // Use entrypoint loader which works in both development and production
       _flutter.loader.loadEntrypoint({
         serviceWorkerSettings: {
           serviceWorkerVersion: serviceWorkerVersion,
         },
-        onEntrypointLoaded: function (engineInitializer) {
-          engineInitializer.initializeEngine().then(function (appRunner) {
+        onEntrypointLoaded: function(engineInitializer) {
+          engineInitializer.initializeEngine().then(function(appRunner) {
             appRunner.runApp();
           });
         }
@@ -58,5 +56,4 @@
     });
   </script>
 </body>
-
 </html>
