fix: update Cloud Notes link to relative path

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <p>QAYHAM delivers cutting-edge software solutions that help businesses streamline operations,
                     improve efficiency, and drive growth in an increasingly digital world.</p>
                 <div class="hero-btns">
-                    <a href="/cloudnotes/" class="btn btn-primary">Cloud Notes</a>
+                    <a href="qayham/cloudnotes/" class="btn btn-primary">Cloud Notes</a>
                     <a href="#contact" class="btn btn-outline">Contact Us</a>
                 </div>
             </div>
