--- a/cloudnotes/index.html
+++ b/cloudnotes/index.html
@@ -15,6 +15,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
+  <!-- Must match deploy path (qayham.com/cloudnotes/). Replaced by flutter build if --base-href is set. -->
   <base href="/cloudnotes/">
 
   <meta charset="UTF-8">
@@ -35,7 +36,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "852187943";
+    var serviceWorkerVersion = "4220504560";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
